# meow-ios

./: AGENTS.md  CLAUDE.md  project.yml
App/: Info.plist
App/Resources/en.lproj/: Localizable.strings
App/Resources/zh-Hans.lproj/: Localizable.strings
App/Sources/: AppModel.swift  AppModelContainer.swift  MeowApp.swift
App/Sources/Services/: MihomoAPI.swift  MihomoAPITypes.swift  SubscriptionService.swift  VpnManager.swift
App/Sources/Views/: ContentView.swift  GlassCard.swift  HomeView.swift  ProxyGroupsView.swift  SettingsView.swift  SubscriptionsView.swift  TrafficView.swift  YamlEditorView.swift
MeowShared/Sources/MeowModels/: AppGroup.swift  Preferences.swift
MeowTests/Parsing/: SubscriptionParserTests.swift
MeowTests/Services/: VpnManagerTests.swift
PacketTunnel/: Info.plist
PacketTunnel/Sources/: MWPacketWriter.m  MWSharedStore.m  MWTunnelEngine.h  MWTunnelEngine.m  PacketTunnelProvider.m
core/rust/macos-utun-harness/: README.md
core/rust/meow-ios-ffi/: Cargo.toml
core/rust/meow-ios-ffi/src/: lib.rs  tun2socks.rs
core/rust/mihomo-ios-ffi/: Cargo.toml
core/rust/mihomo-ios-ffi/src/: engine.rs  fake_ip_dns.rs  logging.rs  rss.rs  tun2socks.rs
core/rust/mihomo-ios-ffi/tests/: xhs_e2e.rs
docs/: INVESTIGATION-memleak-hunt-result.md  index.html
fastlane/: Appfile  Fastfile  README.md
fastlane/metadata/en-US/: description.txt  keywords.txt  marketing_url.txt  name.txt  privacy_url.txt  promotional_text.txt  release_notes.txt  subtitle.txt
metadata/testflight/whats_new/: 2026052301.txt  2026052901.txt
metadata/testflight/zh-Hans/whats_new/: 2026052301.txt  2026052901.txt
