[package]
name = "mihomo-ios-ffi"
version = "0.1.0"
edition = "2021"
description = "mihomo-rust engine + tun2socks + fake-IP DNS for meow-ios — C ABI, no Go, no JNI."

[lib]
# `staticlib` is the iOS xcframework consumer; `rlib` exists so the
# `macos-utun-harness` sibling crate (a developer-only end-to-end test
# binary that runs the FFI against a real `utun` device on macOS) can
# depend on us as a normal Rust dependency instead of going through
# C-ABI relinking. Adds zero cost to the iOS build.
crate-type = ["staticlib", "rlib"]

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_return = "allow"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "signal"] }
parking_lot = "0.12"
futures = "0.3"
# Explicit pin — transitive through mihomo-tunnel, but engine.rs builds
# `DashMap<String, Arc<ProxyProvider>>` for ApiServer::new and tun2socks.rs
# uses the same NAT-key concrete type as mihomo-tunnel. Match upstream's 6.x.
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
oslog = { version = "0.2", default-features = false, features = ["logger"] }

# `rustls` is declared so `engine::start` can install the ring crypto
# provider once at process init for any HTTPS the mihomo engine itself
# opens (subscription fetch, HTTPS outbound, …). Fake-IP DNS doesn't
# terminate TLS, so this is the only direct rustls consumer.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Low-level
libc = "0.2"
anyhow = "1"

# Subscription parsing (v2rayN URI list → Clash YAML)
base64 = "0.22"
url = "2"
urlencoding = "2"

# tun2socks
netstack-smoltcp = "0.2"

# Fake-IP DNS server: DNS message parse/serialize. Already pulled in
# transitively through `mihomo-dns`'s `hickory-resolver`, but we declare
# it explicitly so the import surface in `src/fake_ip_dns.rs` is pinned
# alongside the lockfile entry.
hickory-proto = "0.25"

# Embedded mihomo-rust engine. Pinned to a release tag; bump deliberately
# rather than tracking main. Each crate is a workspace member of
# madeye/mihomo-rust.
mihomo-common = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.2" }
mihomo-config = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.2" }
mihomo-dns = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.2" }
mihomo-tunnel = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.2" }
mihomo-api = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.2" }
mihomo-proxy = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.2" }

# Pin smoltcp to a v0.12.0 fork that backports upstream commit f56ed8b
# ("tcp: Reject bytes outside the receive window"). Without it, peers that
# accept bytes past our advertised window edge trigger a panic in
# smoltcp::socket::tcp::Socket::last_scaled_window via the SeqNumber
# subtraction underflow guard, aborting the PacketTunnel process. The fix
# is in upstream main but has not been released; netstack-smoltcp 0.2 still
# pins smoltcp 0.12, so a 0.13 bump would also need to fork netstack-smoltcp.
[patch.crates-io]
smoltcp = { git = "https://github.com/madeye/smoltcp", branch = "fix/reject-bytes-outside-recv-win" }

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
# xdg_home_dir_tests probes the env-var wire-up via the GeoIP load path.
# `maxminddb` was previously a top-level dependency for the now-removed
# china-DNS split-horizon module; it stays as dev-only to keep that test.
tempfile = "3"
maxminddb = "0.27"

[profile.release]
# Shrink binary for the 50MB extension budget. mihomo-rust adds significant
# weight; LTO + size-optimized codegen keeps us within the NE resident-memory
# ceiling.
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
