[package]
name = "mihomo-ios-ffi"
version = "0.1.0"
edition = "2021"
description = "mihomo-rust engine + tun2socks for meow-ios — C ABI, no Go, no JNI. DNS is delegated in-process to mihomo's resolver in fake-IP mode."

[lib]
# `staticlib` is the iOS xcframework consumer; `rlib` exists so the
# `macos-utun-harness` sibling crate (a developer-only end-to-end test
# binary that runs the FFI against a real `utun` device on macOS) can
# depend on us as a normal Rust dependency instead of going through
# C-ABI relinking. Adds zero cost to the iOS build.
crate-type = ["staticlib", "rlib"]

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_return = "allow"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "signal"] }
parking_lot = "0.12"
futures = "0.3"
# Explicit pin — transitive through mihomo-tunnel, but engine.rs builds
# `DashMap<String, Arc<ProxyProvider>>` for ApiServer::new and tun2socks.rs
# uses the same NAT-key concrete type as mihomo-tunnel. Match upstream's 6.x.
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
oslog = { version = "0.2", default-features = false, features = ["logger"] }

# `rustls` is declared so `engine::start` can install the ring crypto
# provider once at process init for any HTTPS the mihomo engine itself
# opens (subscription fetch, HTTPS outbound, …). The tun2socks UDP/53
# intercept defers parse/serialize to `mihomo_dns::DnsServer::handle_query`,
# so this is the only direct rustls consumer.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Low-level
libc = "0.2"
anyhow = "1"

# Subscription parsing (v2rayN URI list → Clash YAML)
base64 = "0.22"
url = "2"
urlencoding = "2"

# tun2socks
netstack-smoltcp = "0.2"

# Embedded mihomo-rust engine. Pinned to a release tag; bump deliberately
# rather than tracking main. Each crate is a workspace member of
# madeye/mihomo-rust.
mihomo-common = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.6" }
# `boring-tls` activates BoringSSL-backed TLS in mihomo-transport so ECH
# (RFC 9460 SVCB / HTTPS ECHConfigList) and uTLS fingerprinting work for
# proxy outbound. Without it, any proxy entry with `ech-opts:` set is
# rejected at `TlsLayer::new` with `TransportError::Config` and the
# fingerprint field falls back to a stub-warn. Cost: boring-sys vendors
# BoringSSL, adding ~several MB to the stripped extension binary —
# watch the 50 MB NE budget after a release archive.
mihomo-config = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.6", features = ["boring-tls"] }
mihomo-dns = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.6" }
mihomo-tunnel = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.6" }
mihomo-api = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.6" }
mihomo-proxy = { git = "https://github.com/madeye/mihomo-rust", tag = "v0.7.6" }

# Pin smoltcp to a v0.12.0 fork that backports upstream commit f56ed8b
# ("tcp: Reject bytes outside the receive window"). Without it, peers that
# accept bytes past our advertised window edge trigger a panic in
# smoltcp::socket::tcp::Socket::last_scaled_window via the SeqNumber
# subtraction underflow guard, aborting the PacketTunnel process. The fix
# is in upstream main but has not been released; netstack-smoltcp 0.2 still
# pins smoltcp 0.12, so a 0.13 bump would also need to fork netstack-smoltcp.
[patch.crates-io]
smoltcp = { git = "https://github.com/madeye/smoltcp", branch = "fix/reject-bytes-outside-recv-win" }
# Aggressively recycle TIME_WAIT and closed-side CLOSE_WAIT / FIN_WAIT_2
# sockets via `socket.abort()` instead of waiting through 2*MSL. The
# default smoltcp state machine assumes a real network where stale
# 4-tuple segments could arrive; on a logical TUN they cannot, so the
# wait is pure memory overhead — which matters under the iOS NE ~50 MB
# jetsam cap. Diff vs upstream is contained to the runner loop inside
# `src/tcp.rs`.  Lift back to crates.io once the change lands upstream.
netstack-smoltcp = { git = "https://github.com/madeye/netstack-smoltcp", branch = "feat/aggressive-recycle" }


[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
# `xdg_home_dir_tests` probes the env-var wire-up via mihomo-config's GeoIP
# load path. No FFI-side GeoIP / CN-range table is loaded at runtime any
# longer — mihomo's resolver owns the GEOIP rule path — but the test keeps
# `maxminddb` (dev-only, zero shipping impact) so it can also open the
# fixture MMDB directly and prove the env-derived path resolves correctly.
tempfile = "3"
maxminddb = "0.27"
# `test-util` enables `#[tokio::test(start_paused = true)]`, which gives
# the dial-watchdog regression tests virtual time. Without it the tests
# would either block on real wall-clock sleeps (slow CI) or shrink their
# budgets so far they'd flake under load. Dev-only — production builds
# don't pull `test-util` so the time skew never reaches a real device.
tokio = { version = "1", features = ["test-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }

[profile.release]
# Shrink binary for the 50MB extension budget. mihomo-rust adds significant
# weight; LTO + size-optimized codegen keeps us within the NE resident-memory
# ceiling.
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
